[fix] Don't overflow:hidden, it kills autocomplete

--- a/css.styl
+++ b/css.styl
@@ -8,7 +8,7 @@ form
 fieldset
   border: 0
   padding: 10px
-  overflow: hidden
+  overflow: initial
 
   p
     margin: 0 0 10px
